--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyCX18wOcZMHJv_7lYxkKxEfdlOzkav8VrU",
+      authDomain: "cargamortalrpg.firebaseapp.com",
+      projectId: "cargamortalrpg",
+      storageBucket: "cargamortalrpg.appspot.com",
+      messagingSenderId: "368020247266",
+      appId: "1:368020247266:web:5b940b44136bdd8ac284bb"
     };
 
     // Initialize Firebase
